feat: add search by taskId and by expiration date
